[package]
name = "evcore"
version = "0.1.4"
edition = "2024"
license = "Apache-2.0 OR MIT"
description = "A library to assist in setting up event-driven architecture"
readme = "README.md"
repository = "https://github.com/itsstevenwal/evcore"
keywords = ["event-driven", "event-sourcing", "architecture"]

[dependencies]
